# 3d-experiments

./: .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
cube/: CMakeLists.txt  cube.cpp
